find_package(GTest CONFIG REQUIRED)

add_executable(sai_core_object_resource_test object_resource_test.cpp)
target_include_directories(sai_core_object_resource_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(sai_core_object_resource_test PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(sai_core_object_resource_test)
