find_package(GTest CONFIG REQUIRED)

add_executable(sai_core_object_resource_test object_resource_test.cpp)
target_include_directories(sai_core_object_resource_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(sai_core_object_resource_test PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(sai_core_object_resource_test)

add_executable(sai_core_type_registry_test type_registry_test.cpp)
target_link_libraries(sai_core_type_registry_test PRIVATE sai::core GTest::gtest_main)
gtest_discover_tests(sai_core_type_registry_test)

find_package(GTest CONFIG REQUIRED)

add_executable(sai_core_registry_factory_test registry_factory_test.cpp)
target_link_libraries(sai_core_registry_factory_test PRIVATE sai::core GTest::gmock_main)
gtest_discover_tests(sai_core_registry_factory_test)

add_executable(sai_core_context_lifecycle_test context_lifecycle_test.cpp)
target_link_libraries(sai_core_context_lifecycle_test PRIVATE sai::core GTest::gtest_main)
gtest_discover_tests(sai_core_context_lifecycle_test)
